tests/ui/basic/add_assign_type_error.stderr
error: operands for `+` differ in type: `int` + `str`
 --> tests/ui/basic/add_assign_type_error.rs:7:11
  |
7 |         x += "hello";
  |           ^
